--- a/Runnables/CoffeeMakerInitialWriteup.tex
+++ b/Runnables/CoffeeMakerInitialWriteup.tex
@@ -28,6 +28,17 @@ Mastering different ideas related to concurrency is the imperative.
 As always, design is independent of implementation (language).  The
 main concepts to be mastered in this development are Synchronization
 (via Mutexs/Locks/Synchronized keyword/Synchronized(object)/\\Thread
-Waiting/Thread Notification.
+Waiting/Thread Notification).
+\section{Intent}
+To model a Coffee Maker so as to expand the understanding of
+concurrency.
+\section{Stakeholders \& Interests}
+The Coffee Drinker.
+\section{Typical Success Scenario}
+The Coffee Drinker Drinks coffee by pulling the carafe and filling a
+mug or cup.\\
+The Coffee Drinker makes coffee by filling the reservoir with water,
+adding coffee grounds to an unused coffee filter at where the water
+drips through the coffee grounds into the carafe.
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
