--- a/Runnables/UseCase1BriefFormat.tex
+++ b/Runnables/UseCase1BriefFormat.tex
@@ -6,11 +6,13 @@
 
 \begin{document}
 \noindent
-\textbf{Brew Coffee:  }The Coffee Drinker fills the resevoir with
-water.  The Coffee Drinker starts the brewing process.
-The Coffee Maker brews the coffee by getting water from
-the reservoir and pouring the (hot) water over the coffee grounds and
-into the carafe until the reservoir is empty.  The Coffee Maker 
-signals the Coffee Drinker(s) it is finished brewing coffee.
+\textbf{Brew Coffee:  }
+\begin{enumerate}
+\item Coffee Drinker puts coffee in the coffee maker
+\item Coffee Drinker puts water in the coffee maker
+\item Coffee Drinker presses ``brew"
+\item Coffee maker brews the coffee
+\item (Optional) Coffee Maker alerts when done brewing coffee
+\end{enumerate}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
