--- a/Runnables/UseCase2BriefFormat.tex
+++ b/Runnables/UseCase2BriefFormat.tex
@@ -5,9 +5,12 @@
 \usepackage{graphicx}
 \begin{document}
 \noindent
-\textbf{Get Coffee:  }The Coffee Drinker gets coffee by pulling the
-carafe from the Coffee Maker.  The Coffee Drinker pours the coffee
-from the carafe into a cup or mug.  The Coffee Drinker returns the
-carafe to the Coffee Maker.
+\textbf{Get Coffee:  }
+\begin{enumerate}
+   \item Coffee drinker pulls the carafe
+   \item Coffee drinker gets a mug (cup)
+   \item Coffee drinker pours coffee into mug (cup)
+   \item Coffee drinker puts the carafe back
+\end{enumerate}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
