--- a/Runnables/UseCase1.tex
+++ b/Runnables/UseCase1.tex
@@ -5,7 +5,7 @@
 \usepackage{graphicx}
 \begin{document}
 \noindent
-\textbf{Use Case1: }Brew Coffee\\
+\textbf{Use Case 1: Brew Coffee}\\
 \textbf{Scope: }Coffee Maker\\
 \textbf{Level: }Coffee Drinker Goal\\
 \textbf{Primary Actor: }Coffee Drinker\\
