--- a/Runnables/UseCase1.tex
+++ b/Runnables/UseCase1.tex
@@ -29,7 +29,7 @@ serving.\\
 & 3. Brews the coffee\\\hline
 & 4. Alerts when brewing complete\\\hline
 \end{tabular}\\\\
-\textbf{Extentions (Alternative Flows): }
+\textbf{Extensions (Alternative Flows): }
 \begin{itemize}
 \item[3a.]
 If the Coffee Drinker pulls the carafe before the Coffee Maker
