--- a/Runnables/UseCase2.tex
+++ b/Runnables/UseCase2.tex
@@ -45,5 +45,23 @@ onto the floor.
 empty, then the amount of coffee in the carafe continues to decrese
 until the carafe is empty or the Coffee Drinker stops pouring.
 \end{itemize}
+\textbf{Special Requirements:}
+\begin{itemize}
+\item[--]none
+\end{itemize}
+\textbf{Technology \& Variations List:}
+\begin{itemize}
+\item none
+\end{itemize}
+\textbf{Frequency of Occurrence:  }Dependent upon the availability of
+brewed coffee (see \textit{Use Case 1:  The Coffee Drinker shall
+brew Coffee}).\\\\
+\textbf{Open Issues:  }
+\begin{itemize}
+\item[--]The size of the carafe is variable
+\item[--]The size of the mug(cup) is variable
+\item[--]What about multiple fillings of multiple different
+mugs(cups)?
+\end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
