--- a/Runnables/UseCase1.tex
+++ b/Runnables/UseCase1.tex
@@ -16,8 +16,9 @@ shall get Coffee}\\
 \begin{itemize}
 \item Coffee Drinker: wants coffee
 \end{itemize}
-\textbf{Preconditions: }The System is ready to make Coffee.  The
-Coffee Drinker already added fresh coffee.\\
+\textbf{Preconditions: }The System is ready to make Coffee.  Power is
+supplied to the Coffee Maker.  The Coffee Drinker already added fresh
+coffee.\\
 \textbf{Postconditions: }Coffee is brewed, in the Carafe and ready for
 serving.\\
 \textbf{Success Guarantees: }The System brews the coffee.\\\\
