--- a/Runnables/UseCase1.tex
+++ b/Runnables/UseCase1.tex
@@ -11,28 +11,33 @@
 \textbf{Primary Actor: }Coffee Drinker\\
 \textbf{Scenario: }None\\
 \textbf{Related Use Cases: }\textit{Use Case 2:  The Coffee Drinker
-shall get Coffee}\\
+shall get Coffee}\\\textit{Use Case 3:  The Coffee Drinker shall add
+water to the Reservoir}\\
 \textbf{Stakeholders \& Interrests: }
 \begin{itemize}
 \item Coffee Drinker: wants coffee
 \end{itemize}
-\textbf{Preconditions: }The System is ready to make Coffee.  Power is
-supplied to the Coffee Maker.  The Coffee Drinker already added fresh
-coffee.\\
+\textbf{Preconditions: }Power is supplied to the Coffee Maker.
+The Coffee Drinker already added fresh coffee. Water is added to the
+Reservoir (See \textit{Use Case 3:  The Coffee Drinker shall add water
+to the Coffee Maker})\\
 \textbf{Postconditions: }Coffee is brewed, in the Carafe and ready for
 serving.\\
 \textbf{Success Guarantees: }The System brews the coffee.\\\\
 \textbf{Main Success Scenario: }\\
 \begin{tabular}{|p{5.75cm}|p{5.75cm}|}\hline
 \textbf{Coffee Drinker} & \textbf{System}\\\hline
-1.  Add Water & \\\hline
-2.  Start the Brewing Process &\\\hline
-& 3. Brews the coffee\\\hline
-& 4. Alerts when brewing complete\\\hline
+1.  Start the Brewing Process &\\\hline
+& 2. Brews the coffee\\\hline
+& 3. Alerts Coffee Drinker when brewing complete\\\hline
 \end{tabular}\\\\
 \textbf{Extensions (Alternative Flows): }
 \begin{itemize}
-\item[3a.]
+\item[1a.]
+If there is no Water in the Reservoir, then the System alerts the
+Coffee Drinker to add Water (See \textit{Use Case 3:  The Coffee
+Drinker shall add Water to the Reservoir}).
+\item[2a.]
 If the Coffee Drinker pulls the carafe before the Coffee Maker
 is finished brewing the coffee, then Coffee Maker stops brewing,
 continuing once the carafe is returned (under the spigot).
