--- a/Runnables/UseCase1.tex
+++ b/Runnables/UseCase1.tex
@@ -11,33 +11,31 @@
 \textbf{Primary Actor: }Coffee Drinker\\
 \textbf{Scenario: }None\\
 \textbf{Related Use Cases: }\textit{Use Case 2:  The Coffee Drinker
-shall get Coffee}\\\textit{Use Case 3:  The Coffee Drinker shall add
-water to the Reservoir}\\
+shall get Coffee}\\
 \textbf{Stakeholders \& Interrests: }
 \begin{itemize}
 \item Coffee Drinker: wants coffee
 \end{itemize}
 \textbf{Preconditions: }Power is supplied to the Coffee Maker.
-The Coffee Drinker already added fresh coffee. Water is added to the
-Reservoir (See \textit{Use Case 3:  The Coffee Drinker shall add water
-to the Coffee Maker})\\
+The Coffee Drinker already added fresh coffee.\\
 \textbf{Postconditions: }Coffee is brewed, in the Carafe and ready for
 serving.\\
 \textbf{Success Guarantees: }The System brews the coffee.\\\\
 \textbf{Main Success Scenario: }\\
 \begin{tabular}{|p{5.75cm}|p{5.75cm}|}\hline
 \textbf{Coffee Drinker} & \textbf{System}\\\hline
-1.  Start the Brewing Process &\\\hline
-& 2. Brews the coffee\\\hline
-& 3. Alerts Coffee Drinker when brewing complete\\\hline
+1.  Add Water &\\\hline
+2.  Start the Brewing Process &\\\hline
+& 3. Brews the coffee\\\hline
+& 4. Alerts Coffee Drinker when brewing complete (when the Reservoir
+is out of water).\\\hline
 \end{tabular}\\\\
 \textbf{Extensions (Alternative Flows): }
 \begin{itemize}
 \item[1a.]
-If there is no Water in the Reservoir, then the System alerts the
-Coffee Drinker to add Water (See \textit{Use Case 3:  The Coffee
-Drinker shall add Water to the Reservoir}).
-\item[2a.]
+If the Coffee Drinker does not add water, then the System uses what
+ever water is already in the Reservoir.
+\item[3a.]
 If the Coffee Drinker pulls the carafe before the Coffee Maker
 is finished brewing the coffee, then Coffee Maker stops brewing,
 continuing once the carafe is returned (under the spigot).
@@ -52,7 +50,10 @@ unbrewed coffee grounds.
 \end{itemize}
 \textbf{Technology \& Data Variations List: }
 \begin{itemize}
-\item[1a.] Predict the adding ability of choice to the Coffee Drinker
+\item[1a.] The Coffee Drinker adding water is optional.  If the
+Reservoir is empty, and the Coffee Drinker does not add any Water,
+consider having the System alert the Coffee Drinker to add water.
+\item[2a.] Predict the adding ability of choice to the Coffee Drinker
 to automate coffee brewing in future upgrades and improvements.
 \end{itemize}
 \textbf{Frequency of Occurrence: } Dependent upon the brewing time
@@ -61,7 +62,7 @@ combined with the demand of Coffee Drinkers.\\\\
 \begin{itemize}
 \item[--]The size of the carafe is variable
 \item[--]What about a Coffee Maker with multiple carafes?  Would that
-alter the 2a Alternative Flows?
+alter the 3a Alternative Flows?
 \end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
