--- a/Runnables/UseCase2.tex
+++ b/Runnables/UseCase2.tex
@@ -34,14 +34,14 @@ mug(cup).\\
 \end{tabular}\\\\
 \textbf{Extensions (Alternative Flows): }
 \begin{itemize}
-\item[4a.] If the carafe runs out of coffee, then the carafe stops
-emptying.
-\item[4b.] If the carafe runs out of coffee, then the mug(cup) stops
-filling.
-\item[4c.5a.]If the mug(cup) is full and the carafe continues to
+\item[1a.] If the Carafe is already pulled, then the Coffee Drinker
+waits until the Carafe is reuturned.
+\item[4a.,5a.] If the Carafe runs out of coffee, the the Carafe stops
+emptying into the Mug(Cup), and the Mug(Cup) stops filling.
+\item[4b.5b.]If the mug(cup) is full and the carafe continues to
 empty, then no more coffee is added to the mug(cup)--coffee spills
 onto the floor.
-\item[4c.5b.]If the mug(cup) is full and the carafe continues to
+\item[4c.5c.]If the mug(cup) is full and the carafe continues to
 empty, then the amount of coffee in the carafe continues to decrese
 until the carafe is empty or the Coffee Drinker stops pouring.
 \end{itemize}
