--- a/Runnables/ActorGoalList.tex
+++ b/Runnables/ActorGoalList.tex
@@ -11,6 +11,8 @@
 \textbf{Actor} & \textbf{Goal}\\\hline
 Coffee Drinker & Brew Coffee\\\hline
 Coffee Drinker & Get Coffee\\\hline
+Coffee Drinker & Power On\\\hline
+Coffee Drinker & Power Off\\\hline
 \end{tabular}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
