--- a/Runnables/UseCase3Scenario1.tex
+++ b/Runnables/UseCase3Scenario1.tex
@@ -24,19 +24,19 @@ components.\\
 \begin{tabular}{|p{5.75cm}|p{5.75cm}|}\hline
 \textbf{Coffee Drinker} & \textbf{Coffee Maker}\\\hline
 1.  Applies Power to the Coffee Maker & \\\hline
-2. & Indicates Power is Applied\\\hline
-3. & Indicates in the Brewing State\\\hline
-4. & Indicates the Carafe State
+& 2.  Indicates Power is Applied\\\hline
+& 3.  Indicates in the Brewing State\\\hline
+& 4.  Indicates the Carafe State
 \begin{enumerate}
 \item Home--in the Coffee Maker
 \item Pulled--away from the Coffee Maker
 \item Pouring--pouring out the Carafe's contents
 \end{enumerate}
 \\\hline
-5. & Indicates the Current State of the Reservoir (the amount of
+& 5.  Indicates the Current State of the Reservoir (the amount of
 water in the Reservoir)\\\hline
-6. & Indicates the amount of coffee in the Carafe\\\hline
-7. & Sets up to accept Coffee Drinker input:
+& 6.  Indicates the amount of coffee in the Carafe\\\hline
+& 7.  Sets up to accept Coffee Drinker input:
 \begin{enumerate}
 \item To Brew Coffee
 \item To Get the Carafe
