--- a/Runnables/UseCase3Scenario1.tex
+++ b/Runnables/UseCase3Scenario1.tex
@@ -25,7 +25,7 @@ components.\\
 \textbf{Coffee Drinker} & \textbf{Coffee Maker}\\\hline
 1.  Applies Power to the Coffee Maker & \\\hline
 & 2.  Indicates Power is Applied\\\hline
-& 3.  Indicates in the Brewing State\\\hline
+& 3.  Indicates in the Ready State\\\hline
 & 4.  Indicates the Carafe State
 \begin{enumerate}
 \item Home--in the Coffee Maker
