--- a/Runnables/SudokuUseCase1.tex
+++ b/Runnables/SudokuUseCase1.tex
@@ -10,7 +10,8 @@
 \textbf{Level:  }Player Goal\\
 \textbf{Primary Actor:  }Player\\
 \textbf{Scenario:  }N/A\\
-\textbf{Related Use Cases:  }None\\
+\textbf{Related Use Cases:  }\textit{The Player Shall Start a
+New Game}\\
 \textbf{Stakeholders \& Interests:}
 \begin{itemize}
 \item  Player:  Wants a solution to the puzzle
