--- a/Runnables/SudokuUseCase1.tex
+++ b/Runnables/SudokuUseCase1.tex
@@ -5,7 +5,7 @@
 \usepackage{graphicx}
 \begin{document}
 \noindent
-\textbf{Use Case 1:  Play Game}\\
+\textbf{Use Case 1:  Play Game--NEEDS TO CHANGE!!!!!!!!!!!!!!}\\
 \textbf{Scope:  }Sudoku Solver\\
 \textbf{Level:  }Player Goal\\
 \textbf{Primary Actor:  }Player\\
