--- a/Runnables/SudokuUseCase3Casual.tex
+++ b/Runnables/SudokuUseCase3Casual.tex
@@ -6,16 +6,22 @@
 
 \begin{document}
 \noindent
-\textbf{Play Game--NEEDS TO CHANGE!!!!!!!!!}
+\textbf{Start New Game}\\
+\textit{Main Success Scenario: }
 \begin{enumerate}
-\item Player indicates the desire to play a game
+\item Player indicates the desire to start a new game
 \item System asks Player to enter an unsolved puzzle
-\item Player enters the unsolved puzzle
-\item System displays the unsolved puzzle
-\item Player tells system to Play the Game (solve the puzzle)
-\item System solves the puzzle and diplays the results
-\item System stops once the puzzle is completely solved
-\item System displays the completely solved puzzle
+\item Player enters an unsolved puzzle via:
+\begin{enumerate}
+\item Text File
+\item Direct User Input
 \end{enumerate}
+\item System displays the unsolved puzzle
+\end{enumerate}
+\textit{Alternative Scenarios:}
+\begin{itemize}
+\item[3aa.] If the Unsolved Puzzle Text File cannot be opened, then
+the System indicates that to the Player
+\end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
