--- a/Runnables/SudokuUseCase3Brief.tex
+++ b/Runnables/SudokuUseCase3Brief.tex
@@ -6,16 +6,12 @@
 
 \begin{document}
 \noindent
-\textbf{Play Game--NEEDS TO CHANGE!!!!!!!!!}
+\textbf{Start New Game}
 \begin{enumerate}
-\item Player indicates the desire to play a game
+\item Player indicates the desire to start a new game
 \item System asks Player to enter an unsolved puzzle
 \item Player enters the unsolved puzzle
 \item System displays the unsolved puzzle
-\item Player tells system to Play the Game (solve the puzzle)
-\item System solves the puzzle and diplays the results
-\item System stops once the puzzle is completely solved
-\item System displays the completely solved puzzle
 \end{enumerate}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
