--- a/Runnables/SudokuUseCase1Brief.tex
+++ b/Runnables/SudokuUseCase1Brief.tex
@@ -6,12 +6,8 @@
 
 \begin{document}
 \noindent
-\textbf{Play Game--NEEDS TO CHANGE!!!!!!!!!}
+\textbf{Play Game}
 \begin{enumerate}
-\item Player indicates the desire to play a game
-\item System asks Player to enter an unsolved puzzle
-\item Player enters the unsolved puzzle
-\item System displays the unsolved puzzle
 \item Player tells system to Play the Game (solve the puzzle)
 \item System solves the puzzle and diplays the results
 \item System stops once the puzzle is completely solved
