--- a/Runnables/SudokuUseCase3.tex
+++ b/Runnables/SudokuUseCase3.tex
@@ -47,9 +47,7 @@ indicates that to the Player, giving the player the choice to:
 \end{itemize}
 \textbf{Technology \& Variations List:}
 \begin{itemize}
-\item There are several different Sudoku Solvers available.  Future
-incarnations of the Sudoku Solver plan to employ the different type
-Solvers.
+\item None
 \end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
