--- a/Runnables/SudokuUseCase3.tex
+++ b/Runnables/SudokuUseCase3.tex
@@ -34,8 +34,15 @@ of the Player\\\\
 \end{tabular}\\\\
 \textbf{Extensions (Alternative Flows):}
 \begin{itemize}
-\item[]3.1a.]If the text file cannot be opened, then the System
+\item[3.1a.]If the text file cannot be opened, then the System
 indicates that to the Player, giving the player the choice to:
+\begin{enumerate}
+\item Open a different New Game (Unsolved Puzzle) Text file
+\item Perform 3.2 and Manually Enter a New Game (Unsolved Puzzle)
+\end{enumerate}
+\item[3.1b]If the text file cannot be read, or is not of the expected
+ format, then the System does not load the puzzle, indicates the issue
+ to the Player, giving the Player the choice to:
 \begin{enumerate}
 \item Open a different New Game (Unsolved Puzzle) Text file
 \item Perform 3.2 and Manually Enter a New Game (Unsolved Puzzle)
