--- a/LunarMissionDesign/LaunchSimulatorActorGoalList.tex
+++ b/LunarMissionDesign/LaunchSimulatorActorGoalList.tex
@@ -11,8 +11,10 @@
 \textbf{Actor} & \textbf{Goal}\\\hline
 Flight Control Director & Start the Launch\\\hline
 Flight Control Director & Observe Launch Data\\\hline
+Flight Control Director & Abort Lauch (if needed)\\\hline
 Flight Engineer/Technician & Observe Launch Data\\\hline
-Astronaut & Observe the Lauch Data\\\hline
+Astronaut & Observe Lauch Data\\\hline
+Astronaut & Abort Launch (if needed)\\\hline
 \end{tabular}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
