--- a/LunarMissionDesign/LaunchSimulatorActorGoalList.tex
+++ b/LunarMissionDesign/LaunchSimulatorActorGoalList.tex
@@ -9,6 +9,7 @@
 \vspace{4ex}
 \begin{tabular}{|p{5cm}|p{5cm}|}\hline
 \textbf{Actor} & \textbf{Goal}\\\hline
+Flight Control Director & Monitor Pre-Launch Activities\\\hline
 Flight Control Director & Start the Launch\\\hline
 Flight Control Director & Observe Launch Data\\\hline
 Flight Control Director & Abort Lauch (if needed)\\\hline
