--- a/LunarMissionDesign/LaunchSimulatorActorGoalList.tex
+++ b/LunarMissionDesign/LaunchSimulatorActorGoalList.tex
@@ -9,13 +9,10 @@
 \vspace{4ex}
 \begin{tabular}{|p{5cm}|p{5cm}|}\hline
 \textbf{Actor} & \textbf{Goal}\\\hline
-Flight Control Director & Monitor Pre-Launch Activities\\\hline
-Flight Control Director & Start the Launch\\\hline
+Flight Control Director & Monitor Launch Activities\\\hline
 Flight Control Director & Observe Launch Data\\\hline
-Flight Control Director & Abort Lauch (if needed)\\\hline
 Flight Engineer/Technician & Observe Launch Data\\\hline
-Astronaut & Observe Lauch Data\\\hline
-Astronaut & Abort Launch (if needed)\\\hline
+Astronaut & Observe Launch Data\\\hline
 \end{tabular}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
