--- a/LunarMissionDesign/LaunchSimulatorUseCaseList.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCaseList.tex
@@ -8,7 +8,13 @@
 \textbf{Use Case List}\\\\
 \begin{enumerate}
 \item Monitor Pre-Launch Activites
-\item Start the Launch
+   \begin{enumerate}
+      \item Start the Launch
+      \item Abort the Countdown
+      \item Pause the Countdown
+      \item Restart/Start the Countdown
+   \end{enumerate}
+\item Monitor Launch Activities
 \end{enumerate}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
