--- a/LunarMissionDesign/LaunchSimulatorUseCaseList.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCaseList.tex
@@ -7,14 +7,24 @@
 \noindent
 \textbf{Use Case List}\\\\
 \begin{enumerate}
-\item Monitor Pre-Launch Activites
-   \begin{enumerate}
-      \item Start the Launch
-      \item Abort the Countdown
-      \item Pause the Countdown
-      \item Restart/Start the Countdown
-   \end{enumerate}
-\item Monitor Launch Activities
+\item Control Countdown Clock (Flight Controller)
+\begin{enumerate}
+\item Initialize Countdown Clock
+\item Clear Countdown Clock
+\item Reset Countdown Clock
+\end{enumerate}
+\item Monitor Pre-Launch Activites (Flight Controller)
+\begin{enumerate}
+\item Start the Countdown
+\item Abort the Countdown
+\item Pause the Countdown
+\item Restart/Start the Countdown
+\item Initiate Launch (or Monitor Launch Initiation)
+\end{enumerate}
+\item Monitor Launch Activities (Flight Controller)
+\begin{enumerate}
+\item Abort the Launch
+\end{enumerate}
 \end{enumerate}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
