--- a/LunarMissionDesign/MonitorLaunchActivitiesWriteup.tex
+++ b/LunarMissionDesign/MonitorLaunchActivitiesWriteup.tex
@@ -61,7 +61,7 @@ The System monitors the mission data, and once the System determines
 The System Lauches the Rocket (or advises the Flight Controller to
 release the Rocket) by releasing the holds on the Rocket preventing it
 from thrusting up.  The Initiate Launch Activities are completed once
-the Rocket is launched.\\\\
+the Rocket clears the Launching Tower.\\\\
 If the System determines the Rocket is not in
 a stable state for lauch, the System will advise the Flight Controller
 to abort the Launch--or abort the Lauch automatically (depending
@@ -79,7 +79,7 @@ Once the capsules/payload
 separates from the final stage, the Launch is complete.\\\\
 The System advises the Filght Controller on the Stability of the
 launch:  advising the the Filght Controller to abort the Launch, and/or
-aborting the Launch themselves based on the control offered the System
+aborting the Launch based on the control offered the System
 if the Launch is unstable (as similar to \textbf{Monitor Pre-Launch
 Activities}).
 \end{document}
