--- a/LunarMissionDesign/InitiateLaunchUseCaseCasual.tex
+++ b/LunarMissionDesign/InitiateLaunchUseCaseCasual.tex
@@ -21,5 +21,27 @@ launch
 \item System transitions to Launch upon the Rocket clearing the Launch
 Tower
 \end{enumerate}
+\textit{Alternative Scenarios}
+\begin{itemize}
+\item[*] If Use Case is fully automated,
+then the System Initiates the Launch, assess when to launch the
+Rocket, and commands the physical activites to launch the Rocket.  The
+Flight controller has the ability to manuall override and take control
+as needed
+\item[1a.]  Based on the data provided, the System advises the Flight
+Director on Launch Viability
+\item[2a.]  The Flight Controller can chose not Initiate the Launch
+\item[4a.]  If the Engines do not ignite, then the System alerts the
+Flight Controller, the Flight Controller aborts the Launch
+\item [5a., 6a., 7a.]  If the System indicates an error in the Launch
+Data,
+then the System alerts the Flight Controller of the issue, with data
+and recomendation (abort or not abort
+the Launch).
+\item[8a., 9a]  The Flight Controller can abort the Launch, the System
+will not activate the Launch Mechanism
+\item[10a.]  In the event of a Launch Abort, the System will not
+transition to Launch
+\end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
