--- a/LunarMissionDesign/MonitorLaunchActivitiesUseCaseBrief.tex
+++ b/LunarMissionDesign/MonitorLaunchActivitiesUseCaseBrief.tex
@@ -8,7 +8,7 @@
 \textbf{Monitor Launch Activities}
 \begin{enumerate}
 \item System starts the Flight Time Clock
-\item System periodically returs the Flight Time Clock to the
+\item System periodically returns the Flight Time Clock to the
 Flight Controller, Engineers, Astronauts (Users)
 \item System periodically monitors Launch data
 \item System periodically returns Launch data to the Users
