--- a/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
@@ -54,9 +54,25 @@ transitioned from Pre-Launch to Initiate Launch\\\\
 \begin{itemize}
 \item[*.a]  At anytime, the Flight Director can hold the Countdown
 if conditions arise that warant that.
-\item[*.b] At anytime, if the Countdown is on hold, the Filight
+\item[*.b] At anytime, if the Countdown is on hold, the Flight
 Director can resume the Countdown if the State of the System warants
 such a transition;  the Countdown continues at the time stopped
+\item[9c.]  If the System detects an anomaly in the
+Pre-Launch Data, then the System alerts the Users of the anomaly for
+the Flight Director to determine if the anomaly warants a hold in the
+Countdown
+\item[9d.]  If there is a Countdown hold, and the System continues to
+detect an anomaly in the Pre-Launch Data sent to the Users, then the
+Flight Directorcan chose to abort the Launch, the System indicates the
+Aborted Launch
+\item[9e.]  If there is a Countdown hold, the Flight Director will
+resume the countdown if
+\begin{enumerate}
+\item The Anomaly is fixed and there are no other anomalies
+\item The Flight Director determines the Anomaly is not a threat
+to the mission integrity
+\item The Anomaly is determined to be errant
+\end{enumerate}
 \end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
