--- a/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
@@ -73,6 +73,14 @@ resume the countdown if
 to the mission integrity
 \item The Anomaly is determined to be errant
 \end{enumerate}
+The System alerts the Users the Countdown hold is lifted
+\item[9f.] If the System is automated at Countdown and the System
+detects an anomaly, then the System can hold the Countdown, alerting
+the Users;  the Flight Controller can override the hold and resume the
+Countdown
+\item[12c.] If the System is automated at Countdown, them the System
+will initiate the Launch Sequence at the discretion of the Flight
+Controller
 \end{itemize}
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
