--- a/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
+++ b/LunarMissionDesign/LaunchSimulatorUseCase1FullyDressed.tex
@@ -82,5 +82,15 @@ Countdown
 will initiate the Launch Sequence at the discretion of the Flight
 Controller
 \end{itemize}
+\textbf{Special Requirements: }\\\\
+\textbf{Technology \& Variations List: }
+\begin{itemize}
+\item [6c-14c]If the System is automated, once the Flight Director
+inputs the Countdown Time, the System could Initiate the Launch, 
+hold the Countdown, abort the Countdown.  The Flight Director would
+have final authority.
+\end{itemize}
+\textbf{Frequency of Occurence:  }\\\\
+\textbf{Open Issues:  }
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
